tarot_juicer/static/css/tarot_key.css
/* ... */
section.general img {
  width: 30%;
  height: auto;
  /*border: 5px dashed gold;*/
  /* padding: 10px;*/
  box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;
  margin-bottom: 40px;
  margin-top: 40px;
  border-radius: 5px;
  display: inline-block;
  float: center;
}

.image-0 {
  /*    height: 25%;
        width: 25%;*/
  height: 12em;
  width: 16em;
  margin: auto;
  display: block;
}

.esoteric-attributes {
  list-style-type: none;
  -webkit-padding-start: 0px;
  margin: auto;
  margin-bottom: 50px;
  margin-top: 0px;
  font-size: 96%;
  font-weight: bold;
  font-family: Courier, Monaco, monospace;
}

* {
  /* margin: 0 auto; */
  /*padding-top: 20px;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 0px;
  padding:20px*/
  box-sizing: border-box;
}
::before,
::after {
  box-sizing: inherit;
}

.flex-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1em;
  list-style-type: none;
  margin: 0 auto;
  padding-left: 0px;
  padding-bottom: 25px;
  margin-bottom: 0rem;
}

.flex-item {
  background: none;
  padding: 5px;
  height: 150px;
  margin-top: 10px;
  line-height: 350%;
  /* color: inherit;*/
  font-weight: bold;
  font-size: 1em;
  text-align: center;
  border: white;
  /*max-width: 250px;*/
}

.a,
.b {
  height: 15px;
  background: none;
  grid-column: span 2;
  border-top-style: none;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-color: none;
  width: 65%;
  margin: 0 auto;
  margin-top: 25px;
}

.c {
  height: 15px;
  background: none;
  border-top-style: none;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-color: none;
  /* width: 0%; */
  margin: 0 auto;
  margin-top: 25px;
}

.d,
.e {
  grid-column: span 2;
  height: 50px;
  background: none;
  color: black;
  list-style-type: none;
}

.f {
  height: 50px;
  background: none;
  color: black;
  list-style-type: none;
}

/* ul { 
  padding-inline-start: 50px;
}*/

#image-0 {
  width: 60%;
}

.bottom {
  padding-bottom: 0%;
}

#arrow {
  width: 10%;
}

h1,
.h1 {
  font-size: 2.5rem;
  font-weight: bold;
  margin-top: 50px;
  text-align: center;
  margin-left: 0px;
}

.btn {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 2px solid #e74c3c;
  border-radius: 0.6em;
  color: #e74c3c;
  cursor: pointer;
  display: flex;
  align-self: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  padding: 2%;
  text-decoration: none;
  text-align: center;
  text-transform: uppercase;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  /*margin: 0 auto;*/
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.btn:hover,
.btn:focus {
  color: crimson;
  outline: 0;
}

.third {
  border-color: crimson;
  color: black;
  box-shadow: 0 0 40px 40px crimson inset, 0 0 0 0 crimson;
  transition: all 150ms ease-in-out;
  width: 100%;
  height: calc( ( 14vh - 12px ) / 2 );
  max-height: calc( ( 120px - 12px ) / 2 );
  min-height: calc( ( 120px - 12px ) / 2 );
  padding: 6px 12px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.third:hover {
  box-shadow: 0 0 10px 0 crimson inset, 0 0 10px 4px crimson;
}

#centered-buttons {
  margin: auto;
  width: 100%; /* instead of width: auto */
  text-align: center;
  display: inline-block;
  padding-top: 72px;
}

.flex-item {
  max-width: 125px;
}

.narrative-h1s {
  text-align: left;
  padding-top: 30px;
}

p {
  font-size: 120%;
}

ol,
ul,
dl {
  font-size: 120%;
}

img {
  width: 83px;
  /*box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;*/
}

#no-shadow {
  box-shadow: none;
}

/* Shadow on images */
.show-img-shadow {
  box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;
}

/* LEFT RIGHT BUTTONS */
.but-flex{
  display: flex;
  align-items: center;
}

.but-row{
  flex-direction: row;
}

.but-column{
  flex-direction: column;
}

.max-width-360{
  max-width: 360px;
  width: 100%;
  margin: 0 auto;
}

.nav_button{
  border-color: crimson;
  color: black;
  box-shadow: 0 0 60px 60px crimson inset, 0 0 0 0 crimson;
  transition: all 150ms ease-in-out;
  width: 100%;
  max-width: 64px;
  height: 14vh;
  max-height: 120px;
  min-height: 120px;
  padding: 6px 12px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.nav_button i{
  display: block;
  font-size: 2rem;
}

.nav_button:hover {
  box-shadow: 0 0 10px 0 crimson inset, 0 0 10px 4px crimson;
}
@media (min-width: 700px) and (max-width: 768px) {
section.general {
  text-align: center;
  border: 1px solid transparent;
  padding: 0.5em;
  margin-bottom: 1em;
  justify-content: center;
  align-items: center;
  display:flex;
}
}

/*  ##Device = Desktops
  ##Screen = 1281px to higher resolution desktops */
@media (min-width: 1281px) {
  section.general img {
    width: 21%;
  }
}

/* ##Device = Laptops, Desktops
    ##Screen = B/w 1025px to 1280px */

@media (min-width: 1025px) and (max-width: 1280px) {
}

/* ##Device = Tablets, Ipads (portrait)
    ##Screen = B/w 768px to 1024px */

@media (min-width: 768px) and (max-width: 1024px) {
}

/*  ##Device = Tablets, Ipads (landscape)
    ##Screen = B/w 768px to 1024px */
@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
}


/* ##Device = Low Resolution Tablets, Mobiles (Landscape)
    ##Screen = B/w 481px to 767px */
@media (min-width: 410px) and (max-width: 767px) {
  section.general img {
    width: 43%;
  }
  .flex-item {
    max-width: 100px;
  }
  #centered-buttons {
   
  }
  .nav_button{
  border-color: crimson;
  color: white;
  }
  .third{
  border-color: crimson;
  color: white;
  }
}
@media (min-width: 200px) and (max-width: 767px) {
  .gradient_background {
    background: linear-gradient(-90deg, #6c6c6c 0%, black 100%);
    background-attachment: fixed;
    color: white;
  }
}
/* ... */

